--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "style-helpers",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "CSS helpers framework",
   "files": [
     "dist/"
@@ -42,10 +42,13 @@
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "run-sequence": "^2.2.1",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-scss": "^3.13.0"
+  },
+  "dependencies": {
+    "stylelint-order": "^4.0.0"
   }
 }
